# reportit

./: .env.example  .gitignore  README.md  pyproject.toml  task.md
knowledge/: sans_analysis_strategy.md  sans_model_selection.md
src/reportit/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
src/reportit/analysis/: __init__.py  clean.py  fit.py  knowledge.py  loaders.py  metrics.py  sas_agent.py  sascatalog.py  sasfit.py
src/reportit/cache/: __init__.py  store.py
src/reportit/discovery/: __init__.py  inventory.py  naming.py  reduction_json.py  scan.py
src/reportit/execute/: __init__.py  runner.py
src/reportit/integrations/: __init__.py  oncat.py
src/reportit/llm/: __init__.py  client.py  tools.py
src/reportit/narrative/: __init__.py  synthesize.py
src/reportit/plotting/: __init__.py  figures.py
src/reportit/proposal/: __init__.py  extract.py  summarize.py
src/reportit/report/: __init__.py  assemble.py  compile.py  latex_utils.py  tables.py
src/reportit/report/templates/: report.tex.j2
src/reportit/strategy/: __init__.py  engine.py  probes.py
