[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reportit"
version = "0.1.0"
description = "LLM-driven post-experiment report generator for EQSANS at SNS"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    # Data
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",

    # SNS / ORNL catalog
    "pyoncat>=1.5.0",
    "oauthlib>=3.0.0",
    "requests-oauthlib>=1.3.0",

    # LLM (OpenRouter — OpenAI-compatible API)
    "openai>=1.0.0",

    # SANS model fitting
    "sasmodels>=1.0.0",
    "bumps>=1.0.0",

    # Proposal PDF text extraction (pure python)
    "pypdf>=4.0.0",

    # Templating + CLI + config
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
extra = [
    "pdfplumber>=0.11.0",  # optional better PDF extraction fallback
]

[project.scripts]
reportit = "reportit.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reportit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
